# gpax

./: .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .readthedocs.yml  LICENSE  README.md  install_dependencies.py  pyproject.toml  requirements.txt  setup.py
.github/: actions.yml
.github/workflows/: actions.yml  ci-deploy.yml  ci.yml  notebook_smoke.yaml  notebook_smoke.yml  publish-to-pypi.yml  unit.yml
docs/: LICENSE.rst  conf.py  requirements_rtd.txt
docs/source/: LICENSE.rst  README.rst  USAGE.rst  acquisition.rst  conf.py  examples.rst  hypo.rst  index.rst  kernels.rst  models.rst  priors.rst  utils.rst
examples/: GP_sGP.ipynb  GPax_MultiTaskGP_BO.ipynb  MeasuredNoiseGP.ipynb  cBO_1D_GPax_tutorial.ipynb  compare_GPs.ipynb  gpax_GPBO.ipynb  gpax_UIGP.ipynb  gpax_hypo.ipynb  gpax_simpleGP.ipynb  gpax_simpleGP_tutorial.ipynb  gpax_viDKL_plasmons.ipynb  gpax_viGP.ipynb  heteroskedasticGP.ipynb  hypoAL.ipynb  simpleGP.ipynb
examples/contrib/: gpax_dkl_notebookIII_molecules.ipynb
gpax/: __init__.py  __version__.py  _version.py  acquisition.py  dkl.py  gp.py  hypo.py  kernels.py  spm.py  uses_of_utils.prior  utils.py  vgp.py  vidkl.py  vigp.py
gpax/acquisition/: __init__.py  (+5 more)
scripts/: LICENSE  README.md  build.sh  build_docs.sh  build_project.sh  install.sh  test_notebooks.sh  update_version.sh
tests/: test_acq.py  test_bnn.py  test_corgp.py  test_dkl.py  test_func_setter.py  test_gp.py  test_hskgp.py  test_hypo.py  test_ibnn.py  test_kernels.py  test_mngp.py  test_mtgp.py  test_nets.py  test_optimize_acq.py  test_priors.py  test_sparsegp.py  test_spm.py  test_uigp.py  test_utilpriors.py  test_utils.py  test_vgp.py  test_vidkl  test_vidkl.py  test_vigp.py  test_vimtdkl.py  test_vimtgp.py
(+46 files in other folders)
