[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gpax"
authors = [
    {"name" = "Maxim Ziatdinov", "email" = "maxim.ziatdinov@ai4microcopy.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {"file" = "LICENSE"}
description='Gaussian processes in NumPyro and JAX'
classifiers=[
    'Programming Language :: Python',
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Scientific/Engineering'
]

# Core dependencies
dependencies = [
    "matplotlib>=3.1.1",
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "numpyro>=0.18.0",
    "dm-haiku>=0.0.14",
    "jaxopt>-0.8.5",
    "flax>=0.10.7"
]

version = "0.1.9"

[project.optional-dependencies]
test = [
    "flake8",
    "jaxlib",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 127
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs/source/conf\.py
)/
'''

[tool.flit.module]
name = "gpax"

[tool.flit.sdist]
exclude = [
    "docs/",
    "examples/",
    "tests/",
    "images/",
    "*.ipynb",
    "*.png",
    "*.gif",
    "*.jpg",
    "*.sh",
    "*.yml",
    "*.toml",
    "*.md",
    "*.txt",
    "*.rst",
    "*.bat",
    "Makefile",
    "LICENSE",
    ".flake8",
    ".DS_Store",
    ".pytest_cache/",
    ".vscode/",
    "__pycache__/",
    "*.pyc",
    "*.code-workspace"
]
include = [
    "gpax/",
    "LICENSE",
    "pyproject.toml",
    "README.md"
]
